<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp"
    >

  <ImageView
      android:id="@+id/iconApplication"
      android:layout_width="40dp"
      android:layout_height="40dp"
      android:contentDescription="@string/icon_application"
      android:paddingRight="10dp"
      />

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      >

    <LinearLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="4"
        >

      <TextView
          android:id="@+id/txtApplication"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="3"
          android:text="@string/name_application_list"
          android:textColor="@color/colorPrimary"
          />

      <TextView
          android:id="@+id/txtTotalSize"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:gravity="end"
          android:text="@string/amount_storage_example_item"
          android:textColor="@color/colorAccent"
          />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:weightSum="3"
        >

      <TextView
          android:id="@+id/txtApplicationSize"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/example_app_item"
          android:textColor="@color/colorPrimaryDark"
          />

      <TextView
          android:id="@+id/txtCacheSize"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/example_cache_item"
          android:textColor="@color/colorPrimaryDark"
          />

      <TextView
          android:id="@+id/txtDataSize"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:text="@string/example_data_item"
          android:textColor="@color/colorPrimaryDark"
          />
    </LinearLayout>
  </LinearLayout>
</LinearLayout>